--- a/src/components/Cover.css
+++ b/src/components/Cover.css
@@ -13,10 +13,11 @@ body {
     /* bring your own prefixes */
     transform: translate(-50%, -50%);
     text-align: justify;
+    z-index: 1000;
 }
 h1 {
     font-family: Windsor;
-    font-size: 34px;
+    font-size: 40px;
     text-align: center;
     margin-top: 0;
 }
