--- a/src/components/LogIn.css
+++ b/src/components/LogIn.css
@@ -6,7 +6,7 @@ body {
     color: white;
 }
 .page {
-    width: 440px;
+    width: 520px;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -14,11 +14,11 @@ body {
     transform: translate(-50%, -50%);
     text-align: justify;
 }
-h1 {
+.wvc {
     font-family: Windsor;
-    font-size: 40px;
+    font-size: 38px;
     text-align: center;
-    margin-top: 0;
+    padding-top: 1vh;
 }
 h2 {
     font-family: Univers Cn Regular;
@@ -37,11 +37,11 @@ h3 {
     justify-content: center;
 }
 .blue-earth {
-    width: 350px;
-    height: 350px;
+    width: 360px;
+    height: 360px;
     background-color: #70ACBF;
     border-radius: 100%;
-    margin: 3vh 0 7vh 0;
+    margin: 4vh 0 10vh 0;
     display: flex;
     align-items: center;
     justify-content: center;
