--- a/src/components/Cover.css
+++ b/src/components/Cover.css
@@ -6,7 +6,7 @@ body {
     color: white;
 }
 .page {
-    width: 520px;
+    width: 500px;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -87,6 +87,18 @@ a {
     text-align: right;
 }
 .corner-button:hover {
+    color: white;
+}
+.show-menu {
+    position: absolute;
+    color: #ffffff89;
+    cursor: pointer;
+    left: 50%;
+    top: 15px;
+    z-index: 1000;
+    font-size: 22px;
+}
+.show-menu:hover {
     color: white;
 }
 @font-face {
