--- a/src/components/Cover.css
+++ b/src/components/Cover.css
@@ -101,6 +101,18 @@ a {
 .show-menu:hover {
     color: white;
 }
+.edit {
+    position: absolute;
+    color: #ffffff89;
+    cursor: pointer;
+    left: 50%;
+    bottom: 15px;
+    z-index: 1000;
+    font-size: 24px;
+}
+.edit:hover {
+    color: white;
+}
 @font-face {
     font-family: Windsor;
     src: url(../fonts/Windsor\ Regular.ttf);
