--- a/src/components/LogIn.css
+++ b/src/components/LogIn.css
@@ -19,17 +19,20 @@ body {
     font-size: 38px;
     text-align: center;
     padding-top: 1vh;
+    font-weight: normal;
 }
 h2 {
     font-family: Univers Cn Regular;
     font-style: italic;
     font-size: 20px;
     text-align: center;
+    font-weight: normal;
 }
 h3 {
     font-family: Windsor;
     font-size: 20px;
     margin: 0 0;
+    font-weight: normal;
 }
 .login {
     display: flex;
