--- a/src/components/Index.css
+++ b/src/components/Index.css
@@ -3,3 +3,54 @@
     height: 100vh;
     width: 100vw;
 }
+.index-page {
+    background-color: white;
+    position: absolute;
+    padding-top: 8vh;
+}
+.page-title {
+    color: black;
+    font-family: Windsor;
+    font-size: 80px;
+    margin: 0 0 4vh 12vw;
+    background-color: white;
+}
+.vibe-bar {
+    background-color:dimgrey;
+    height: 18vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    text-overflow: ellipsis;
+    cursor: pointer;
+}
+.vibe-bar:hover {
+    background-color:aqua;
+}
+.vibe-title {
+    width: 100vw;
+    font-family: Windsor;
+    font-size: 50px;
+    margin: 0 0 0 12vw;
+    background-color: rgba(240, 248, 255, 0);
+    text-overflow:ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+.menu-container-index {
+    position: sticky;
+    top: 0;
+}
+.edit-black-index {
+    position:absolute;
+    cursor: pointer;
+    left: 50%;
+    z-index: 1000;
+    font-size: 24px;
+    background-color: rgba(255, 255, 255, 0);
+    color: #0000006e;
+    top: calc(100vh - 44px);
+}
+.edit-black-index:hover {
+    color: black;
+}
