--- a/src/components/LogIn.css
+++ b/src/components/LogIn.css
@@ -21,7 +21,7 @@ body {
     padding-top: 1vh;
     font-weight: normal;
 }
-h2 {
+.access-to {
     font-family: Univers Cn Regular;
     font-style: italic;
     font-size: 20px;
