--- a/src/components/Cover.css
+++ b/src/components/Cover.css
@@ -49,14 +49,15 @@ a {
     background-color:#70ACBF;
     text-decoration: none;
 }
+.menu-subcontainer {
+    position: relative;
+}
 .corner-buttons-container {
     background-color: #70adbf00;
 }
 .corner-buttons {
-    width: calc(100vw - 30px);
-    height: calc(100vh - 30px);
     display: flex;
-    position: absolute;
+    position: relative;
     background-color: #70adbf00;
     padding: 15px;
     flex-wrap: wrap;
@@ -69,22 +70,23 @@ a {
     cursor: pointer;
     height: fit-content;
     width: fit-content;
+    position: absolute;
 }
 .corner-button.top-left {
-    width: 50%;
+    top: 15px;
+    left: 15px;
 }
 .corner-button.top-right {
-    margin-left: auto;
-    text-align: right;
+    top: 15px;
+    right: 15px;
 }
 .corner-button.bottom-left {
-    width: 50%;
-    margin-top: auto;
+    bottom: 15px;
+    left: 15px;
 }
 .corner-button.bottom-right {
-    margin-left: auto;
-    margin-top: auto;
-    text-align: right;
+    bottom: 15px;
+    right: 15px;
 }
 .corner-button:hover {
     color: white;
@@ -106,7 +108,7 @@ a {
     color: #ffffff89;
     cursor: pointer;
     left: 50%;
-    bottom: 15px;
+    top: calc(100vh - 43px);
     z-index: 1000;
     font-size: 24px;
 }
