--- a/src/components/Edit.css
+++ b/src/components/Edit.css
@@ -1,7 +1,8 @@
-.Edit {
-    background-color: white;
-    height: 100vh;
-    width: 100vw;
+.popup-content {
+    background-color: #00000000;
+    border: none;
+    margin: 0;
+    padding: 0;
 }
 .book-icon {
     height: 22px;
@@ -19,3 +20,138 @@
 .book-icon:hover {
     opacity: 1;
 }
+.upload-new-cool {
+    background-color: white;
+    margin: 0 0 2vh 0;
+    font-family: Windsor;
+    font-size: 40px;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    text-align: center;
+}
+.index-page-center {
+    background-color: #00000000;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+}
+.inputs {
+    margin-top: 2vh;
+    background-color: white;
+}
+.upload-form {
+    background-color: white;
+    border-radius: 20px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.upload-button {
+    background-color:white;
+    color: #0000007f;
+    border: 2px solid #0000007f;
+    border-radius: 2px;
+    font-family: Univers Bold;
+    font-size: 14px;
+    height: 30px;
+    width: 90px;
+    text-align: center;
+    cursor: pointer;
+    font-weight: bold;
+}
+.upload-button:hover {
+    background-color: #70ACBF;
+    color: white;
+    border: 2px solid #70ACBF;
+}
+.upload-new-label {
+    color: black;
+    font-family: Univers Regular;
+    margin-bottom: 4px;
+    font-size: 12px;
+    background-color: white;
+    text-align: left;
+}
+textarea {
+    border: 2px solid #0000007f;
+    border-radius: 2px;
+    font-family: Univers Regular;
+    font-size: 14px;
+}
+select {
+    background-color: white;
+    font-family: Windsor;
+    font-size: 24px;
+    color: black;
+    border-radius: 2px;
+}
+.upload-new-input {
+    background-color: white;
+    font-size: 14px;
+    color: black;
+    border: 1px solid #0000007f;
+}
+#upload-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 60px;
+    padding: 5px;
+    border: 1px dashed #0000007f;
+}
+.input-section {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 8px;
+    background-color: white;
+}
+.close {
+    background-color: white;
+    color: black;
+    text-decoration: underline;
+    margin-top: 1.5vh;
+    cursor: pointer;
+    font-size: 14px;
+}
+.close:hover {
+    color: indianred;
+}
+/* .x-button {
+    position:absolute;
+    cursor: pointer;
+    right: 15px;
+    z-index: 1000;
+    width: 50px;
+    height: 50px;
+    border-radius: 1000px;
+    background-color: white;
+    border: 2px solid #0000006e;
+    top: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.x-button:hover {
+    background-color: #70ACBF;
+    border-color: #70ACBF;
+}
+.x-button:hover .x {
+    color: #70ACBF;
+}
+.x {
+    background-color: #70adbf00;
+    color: #0000006e;
+    font-size: 40px;
+    margin: 0 0;
+    padding: 0 0;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight:100;
+} */
