--- a/src/components/Index.css
+++ b/src/components/Index.css
@@ -25,7 +25,7 @@
     cursor: pointer;
 }
 .vibe-bar:hover {
-    background-color:darkturquoise;
+    background-color:darkgray;
 }
 .vibe-title {
     width: 100vw;
@@ -41,20 +41,45 @@
     position: sticky;
     top: 0;
 }
-.corner-button.black.bottom-left {
+.corner-button.white.bottom-left {
     top: calc(100vh - 15px);
     left: 15px;
+    color: #ffffff98;
+}
+.corner-button.white.bottom-left:hover {
+    color: white;
 }
 .edit-black-index {
     position:absolute;
     cursor: pointer;
-    left: 50%;
+    right: 15px;
     z-index: 1000;
-    font-size: 24px;
-    background-color: rgba(255, 255, 255, 0);
-    color: #0000006e;
-    top: calc(100vh - 44px);
+    width: 50px;
+    height: 50px;
+    border-radius: 1000px;
+    background-color: #70adbf00;
+    border: 2px solid #ffffff98;
+    top: calc(100vh - 68px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .edit-black-index:hover {
-    color: black;
+    background-color: #70ACBF;
+    border-color: #70ACBF;
+}
+.edit-black-index:hover .plus {
+    color: white;
+}
+.plus {
+    background-color: #70adbf00;
+    color: rgba(255, 255, 255, 0.668);
+    font-size: 40px;
+    margin: 0 0;
+    padding: 0 0;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight:100;
+}
+.popup-content {
+    width: 480px;
 }
