--- a/src/components/Edit.css
+++ b/src/components/Edit.css
@@ -3,6 +3,7 @@
     border: none;
     margin: 0;
     padding: 0;
+    width: 480px;
 }
 .book-icon {
     height: 22px;
@@ -53,6 +54,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 540px;
 }
 .upload-button {
     background-color:white;
