--- a/src/components/Index.css
+++ b/src/components/Index.css
@@ -11,13 +11,13 @@
 .page-title {
     color: black;
     font-family: Windsor;
-    font-size: 80px;
-    margin: 0 0 4vh 12vw;
+    font-size: 48px;
+    margin: 2vh 0 4vh 12vw;
     background-color: white;
 }
 .vibe-bar {
     background-color:dimgrey;
-    height: 18vh;
+    height: 20vh;
     width: 100vw;
     display: flex;
     align-items: center;
@@ -30,7 +30,7 @@
 .vibe-title {
     width: 100vw;
     font-family: Windsor;
-    font-size: 45px;
+    font-size: 58px;
     margin: 0 0 0 12vw;
     background-color: rgba(240, 248, 255, 0);
     text-overflow:ellipsis;
@@ -41,44 +41,39 @@
     position: sticky;
     top: 0;
 }
-.corner-button.white.bottom-left {
+.corner-button.white.bottom-right {
     top: calc(100vh - 15px);
-    left: 15px;
     color: #ffffff98;
+    font-size: 30;
+    /* bottom: 15px; */
+    left: calc(50% + 2px);
 }
-.corner-button.white.bottom-left:hover {
+.corner-button.white.bottom-right:hover {
     color: white;
 }
 .edit-black-index {
     position:absolute;
     cursor: pointer;
     right: 15px;
-    z-index: 1000;
     width: 50px;
     height: 50px;
     border-radius: 1000px;
-    background-color: #70adbf00;
-    border: 2px solid #ffffff98;
+    background-color: #70ACBF;
+    border: 2px solid #70ACBF;
     top: calc(100vh - 68px);
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.edit-black-index:hover {
-    background-color: #70ACBF;
-    border-color: #70ACBF;
-}
-.edit-black-index:hover .plus {
-    color: white;
-}
 .plus {
     background-color: #70adbf00;
-    color: rgba(255, 255, 255, 0.668);
+    color: rgb(255, 255, 255);
     font-size: 40px;
     margin: 0 0;
     padding: 0 0;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight:100;
+    cursor: pointer;
 }
 .popup-content {
     width: 480px;
