--- a/src/components/Cover.css
+++ b/src/components/Cover.css
@@ -74,6 +74,9 @@ a {
 .corner-button.top-left {
     top: 15px;
     left: 15px;
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
 }
 .corner-button.top-right {
     top: 15px;
@@ -114,6 +117,21 @@ a {
     font-size: 24px;
 }
 .edit:hover {
+    color: white;
+}
+.logout-button {
+    font-family: Univers Regular;
+    font-size: 16px;
+    cursor: pointer;
+    color: #ffffff89;
+}
+.logout-button:hover {
+    text-decoration: underline;
+}
+.username {
+    color: #ffffff89;
+}
+.username:hover {
     color: white;
 }
 @font-face {
