--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -26,12 +26,14 @@
 .corner-button.index {
     top: 15px;
     right: 15px;
-    position: absolute;
+    position: fixed;
+    z-index: 1;
 }
 .arrows-container {
-    position: absolute;
-    bottom: 10px;
-    width: calc(100vw - 30px);
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -39,7 +41,7 @@
 }
 .arrow {
     font-family: Univers Bold;
-    font-size: 35px;
+    font-size: 30px;
     color: #ffffff89;
     background-color: #ffffff00;
     border: none;
@@ -57,7 +59,7 @@
 }
 .arrow.black {
     font-family: Univers Bold;
-    font-size: 35px;
+    font-size: 30px;
     color: #898989;
     background-color: #ffffff00;
     border: none;
@@ -77,24 +79,23 @@
     color: white;
 }
 .show-menu {
-    position: absolute;
+    position: fixed;
     color: #ffffff89;
     cursor: pointer;
     left: 50%;
     top: 12px;
-    z-index: 998;
     font-size: 26px;
+    z-index: 1;
 }
 .show-menu:hover {
     color: white;
 }
 .edit {
-    position:absolute;
+    position:fixed;
     color: #ffffff89;
     cursor: pointer;
     left: 50%;
     top: calc(100vh - 43px);
-    z-index: 1000;
     font-size: 24px;
 }
 .edit:hover {
@@ -104,18 +105,20 @@
     height: 0;
 }
 .username-logout {
-    width: 50vw;
+    position: fixed;
     top: 15px;
     left: 15px;
     display: flex;
     flex-direction: row;
     gap: 8px;
+    z-index: 1;
 }
 .logout-button {
     font-family: Univers Regular;
     font-size: 16px;
     cursor: pointer;
     color: #ffffff89;
+    z-index: 1;
 }
 .logout-button:hover {
     text-decoration: underline;
@@ -137,9 +140,4 @@
     font-size: 16px;
     cursor: pointer;
     color: #0000006e;
-}
-.corner-button.username {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
 }
