--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -32,6 +32,7 @@ h3 {
     font-family: Windsor;
     font-size: 20px;
     margin: 0 0;
+    padding-left: 10px;
     font-weight: normal;
 }
 .login {
