--- a/src/components/Index.css
+++ b/src/components/Index.css
@@ -8,9 +8,8 @@
 .index-page {
     background-color: white;
     position: absolute;
-    padding-top: 6vh;
     z-index: 0;
-    width: 80vw;
+    margin: 6vh 1vw 1vw;
 }
 .page-title {
     color: black;
@@ -18,6 +17,7 @@
     font-size: 50px;
     background-color: white;
     text-align: center;
+    letter-spacing: 1px;
 }
 .vibe-bar {
     background-color:dimgrey;
