--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -121,7 +121,7 @@
     z-index: 1;
 }
 .logout-button:hover {
-    text-decoration: underline;
+    color: rgb(255, 255, 255);
 }
 .username {
     color: #ffffff89;
@@ -140,4 +140,7 @@
     font-size: 16px;
     cursor: pointer;
     color: #0000006e;
+}
+.logout-button.black:hover {
+    color: #000000;
 }
