--- a/src/components/Index.css
+++ b/src/components/Index.css
@@ -19,25 +19,9 @@
     text-align: center;
     letter-spacing: 1px;
 }
-.vibe-bar {
-    background-color:dimgrey;
-    height: 20vh;
-    width: 100vw;
+
+.vibe-cards {
     display: flex;
-    align-items: center;
-    text-overflow: ellipsis;
-    cursor: pointer;
-}
-.vibe-bar:hover {
-    background-color:darkgray;
-}
-.vibe-title {
-    width: 100vw;
-    font-family: Windsor;
-    font-size: 50px;
-    margin: 0 0 0 12vw;
-    background-color: rgba(240, 248, 255, 0);
-    text-overflow:ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
