--- a/src/components/edit/Edit.css
+++ b/src/components/edit/Edit.css
@@ -95,7 +95,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 78vh;
+    padding: 50px 0 50px 0;
     width: 500px;
 }
 .upload-button {
@@ -106,7 +106,7 @@
     font-family: Univers Bold;
     font-size: 18px;
     height: 38px;
-    width: 110px;
+    width: 145px;
     text-align: center;
     cursor: pointer;
     margin-top: 2vh;
@@ -144,7 +144,6 @@ select {
     font-size: 14px;
     color: black;
     border: 1px solid #0000007f;
-    width: 100%;
 }
 #upload-image {
     display: flex;
