--- a/src/components/Cover.css
+++ b/src/components/Cover.css
@@ -1,3 +1,8 @@
+.Cover {
+    background-color: black;
+    width: 100vw;
+    height: 100vh;
+}
 body {
     background-color: black;
     margin: 0 0;
