--- a/src/components/Index.css
+++ b/src/components/Index.css
@@ -1,7 +1,5 @@
 .Index {
     background-color: white;
-    height: 100vh;
-    width: 100vw;
     display: flex;
     justify-content: center;
 }
@@ -9,19 +7,20 @@
     background-color: white;
     position: absolute;
     z-index: 0;
-    margin: 6vh 1vw 1vw;
+    padding: 8vh 0 10vh 0;
 }
 .page-title {
     color: black;
     font-family: Windsor;
-    font-size: 50px;
+    font-size: 48px;
     background-color: white;
     text-align: center;
     letter-spacing: 1px;
+    margin-bottom: 4vh;
 }
-
 .vibe-cards {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    padding: 0 5vw 0 5vw;
 }
