--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -78,6 +78,7 @@ h3 {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: black;
 }
 .login-word {
     background-color: #70ACBF;
