OK NOW NOW READY DB VIBE HOOKEM

--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -122,6 +122,7 @@
     cursor: pointer;
     color: #ffffff89;
     z-index: 1;
+    background-color: rgba(255, 0, 0, 0);
 }
 .logout-button:hover {
     color: rgb(255, 255, 255);
